[workspace]
resolver = "2"
members = [
    "core",
    "counter",
    "betting",
    "rewards",
    "player-nft"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [""]
license = "MIT"

[workspace.dependencies]
soroban-sdk = "20.0.0" # Matches standard Soroban stable runtime distributions
renaissance-core = { path = "./core" }

[profile.release]
opt-level = "z"     # Optimize aggressively for smallest binary size (crucial for Soroban)
overflow-checks = true
debug = false
panic = "abort"
lto = true
codegen-units = 1