[workspace]
resolver = "2"
members = [
    "core",
    "counter",
    "betting",
    "rewards",
    "player-nft",
    "oracle",
    "vault"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Renaissance Contributors"]
license = "MIT"
publish = false

[workspace.dependencies]
soroban-sdk = "21.4.0"
renaissance-core = { path = "./core" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
lto = true
codegen-units = 1
