[package]
name = "renaissance-player-nft"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
renaissance-core = { workspace = true }

[package.metadata]
security-review = "requires formal ownership invariant review"
